--- a/2021-08-11-TIL/index.html
+++ b/2021-08-11-TIL/index.html
@@ -95,12 +95,14 @@
 <hr>
 <br>
 <h3 id="1-react" style="position:relative;"><a href="#1-react" aria-label="1 react permalink" class="anchor before"><svg aria-hidden="true" focusable="false" height="16" version="1.1" viewBox="0 0 16 16" width="16"><path fill-rule="evenodd" d="M4 9h1v1H4c-1.5 0-3-1.69-3-3.5S2.55 3 4 3h4c1.45 0 3 1.69 3 3.5 0 1.41-.91 2.72-2 3.25V8.59c.58-.45 1-1.27 1-2.09C10 5.22 8.98 4 8 4H4c-.98 0-2 1.22-2 2.5S3 9 4 9zm9-3h-1v1h1c1 0 2 1.22 2 2.5S13.98 12 13 12H9c-.98 0-2-1.22-2-2.5 0-.83.42-1.64 1-2.09V6.25c-1.09.53-2 1.84-2 3.25C6 11.31 7.55 13 9 13h4c1.45 0 3-1.69 3-3.5S14.5 6 13 6z"></path></svg></a>1. React</h3>
+<hr>
 <ul>
 <li>프론트앤드 개발을 위한 JavaScript 오픈소스 라이브러리.</li>
 </ul>
 <br>
 <br>
 <h4 id="1-1-리액트의-3가지-특징" style="position:relative;"><a href="#1-1-%EB%A6%AC%EC%95%A1%ED%8A%B8%EC%9D%98-3%EA%B0%80%EC%A7%80-%ED%8A%B9%EC%A7%95" aria-label="1 1 리액트의 3가지 특징 permalink" class="anchor before"><svg aria-hidden="true" focusable="false" height="16" version="1.1" viewBox="0 0 16 16" width="16"><path fill-rule="evenodd" d="M4 9h1v1H4c-1.5 0-3-1.69-3-3.5S2.55 3 4 3h4c1.45 0 3 1.69 3 3.5 0 1.41-.91 2.72-2 3.25V8.59c.58-.45 1-1.27 1-2.09C10 5.22 8.98 4 8 4H4c-.98 0-2 1.22-2 2.5S3 9 4 9zm9-3h-1v1h1c1 0 2 1.22 2 2.5S13.98 12 13 12H9c-.98 0-2-1.22-2-2.5 0-.83.42-1.64 1-2.09V6.25c-1.09.53-2 1.84-2 3.25C6 11.31 7.55 13 9 13h4c1.45 0 3-1.69 3-3.5S14.5 6 13 6z"></path></svg></a>1-1. 리액트의 3가지 특징</h4>
+<hr>
 <ol>
 <li><strong>선언형 (Declarative)</strong></li>
 </ol>
@@ -140,6 +142,7 @@
 <br>
 <br>
 <h4 id="1-2-jsx" style="position:relative;"><a href="#1-2-jsx" aria-label="1 2 jsx permalink" class="anchor before"><svg aria-hidden="true" focusable="false" height="16" version="1.1" viewBox="0 0 16 16" width="16"><path fill-rule="evenodd" d="M4 9h1v1H4c-1.5 0-3-1.69-3-3.5S2.55 3 4 3h4c1.45 0 3 1.69 3 3.5 0 1.41-.91 2.72-2 3.25V8.59c.58-.45 1-1.27 1-2.09C10 5.22 8.98 4 8 4H4c-.98 0-2 1.22-2 2.5S3 9 4 9zm9-3h-1v1h1c1 0 2 1.22 2 2.5S13.98 12 13 12H9c-.98 0-2-1.22-2-2.5 0-.83.42-1.64 1-2.09V6.25c-1.09.53-2 1.84-2 3.25C6 11.31 7.55 13 9 13h4c1.45 0 3-1.69 3-3.5S14.5 6 13 6z"></path></svg></a>1-2. JSX</h4>
+<hr>
 <ul>
 <li>
 <p>JSX는 JS와는 유사하며 JS를 확장한 문법이지만, 브라우저가 바로 실행할 수 있는 JavaScript 코드는 아니다.</p>
@@ -151,7 +154,11 @@
 </ul>
 <br>
 <br>
-<h3 id="2-react-기본-문법-실습--a-href--httpsgithubcomjh8459im-sprint-react-twittler-intro-target_blankgithub-참조a" style="position:relative;"><a href="#2-react-%EA%B8%B0%EB%B3%B8-%EB%AC%B8%EB%B2%95-%EC%8B%A4%EC%8A%B5--a-href--httpsgithubcomjh8459im-sprint-react-twittler-intro-target_blankgithub-%EC%B0%B8%EC%A1%B0a" aria-label="2 react 기본 문법 실습  a href  httpsgithubcomjh8459im sprint react twittler intro target_blankgithub 참조a permalink" class="anchor before"><svg aria-hidden="true" focusable="false" height="16" version="1.1" viewBox="0 0 16 16" width="16"><path fill-rule="evenodd" d="M4 9h1v1H4c-1.5 0-3-1.69-3-3.5S2.55 3 4 3h4c1.45 0 3 1.69 3 3.5 0 1.41-.91 2.72-2 3.25V8.59c.58-.45 1-1.27 1-2.09C10 5.22 8.98 4 8 4H4c-.98 0-2 1.22-2 2.5S3 9 4 9zm9-3h-1v1h1c1 0 2 1.22 2 2.5S13.98 12 13 12H9c-.98 0-2-1.22-2-2.5 0-.83.42-1.64 1-2.09V6.25c-1.09.53-2 1.84-2 3.25C6 11.31 7.55 13 9 13h4c1.45 0 3-1.69 3-3.5S14.5 6 13 6z"></path></svg></a>2. React 기본 문법 실습 : <a href = "https://github.com/JH8459/im-sprint-react-twittler-intro" target="_blank">Github 참조</a></h3>
+<h3 id="2-react-기본-문법-실습" style="position:relative;"><a href="#2-react-%EA%B8%B0%EB%B3%B8-%EB%AC%B8%EB%B2%95-%EC%8B%A4%EC%8A%B5" aria-label="2 react 기본 문법 실습 permalink" class="anchor before"><svg aria-hidden="true" focusable="false" height="16" version="1.1" viewBox="0 0 16 16" width="16"><path fill-rule="evenodd" d="M4 9h1v1H4c-1.5 0-3-1.69-3-3.5S2.55 3 4 3h4c1.45 0 3 1.69 3 3.5 0 1.41-.91 2.72-2 3.25V8.59c.58-.45 1-1.27 1-2.09C10 5.22 8.98 4 8 4H4c-.98 0-2 1.22-2 2.5S3 9 4 9zm9-3h-1v1h1c1 0 2 1.22 2 2.5S13.98 12 13 12H9c-.98 0-2-1.22-2-2.5 0-.83.42-1.64 1-2.09V6.25c-1.09.53-2 1.84-2 3.25C6 11.31 7.55 13 9 13h4c1.45 0 3-1.69 3-3.5S14.5 6 13 6z"></path></svg></a>2. React 기본 문법 실습</h3>
+<hr>
+<blockquote>
+<p><a href = "https://github.com/JH8459/im-sprint-react-twittler-intro" target="_blank">Github 참조</a></p>
+</blockquote>
 <p><img src="https://user-images.githubusercontent.com/83164003/129056832-1bd66fa4-4693-4363-98ce-5cbf39f31c60.png" alt="스크린샷, 2021-08-12 00-19-37"></p>
 <br>
 <br>
@@ -179,7 +186,7 @@
 </ul>
 </li>
 <li>
-<p><a href="#2-react-%EA%B8%B0%EB%B3%B8-%EB%AC%B8%EB%B2%95-%EC%8B%A4%EC%8A%B5--a-href--httpsgithubcomjh8459im-sprint-react-twittler-intro-target_blankgithub-%EC%B0%B8%EC%A1%B0a">2. React 기본 문법 실습 : <a href = "https://github.com/JH8459/im-sprint-react-twittler-intro" target="_blank">Github 참조</a></a></p>
+<p><a href="#2-react-%EA%B8%B0%EB%B3%B8-%EB%AC%B8%EB%B2%95-%EC%8B%A4%EC%8A%B5">2. React 기본 문법 실습</a></p>
 </li>
 </ul>
 </li>
