--- a/2021-08-13-TIL/index.html
+++ b/2021-08-13-TIL/index.html
@@ -95,15 +95,18 @@
 <hr>
 <br>
 <h3 id="1-react-props--state" style="position:relative;"><a href="#1-react-props--state" aria-label="1 react props  state permalink" class="anchor before"><svg aria-hidden="true" focusable="false" height="16" version="1.1" viewBox="0 0 16 16" width="16"><path fill-rule="evenodd" d="M4 9h1v1H4c-1.5 0-3-1.69-3-3.5S2.55 3 4 3h4c1.45 0 3 1.69 3 3.5 0 1.41-.91 2.72-2 3.25V8.59c.58-.45 1-1.27 1-2.09C10 5.22 8.98 4 8 4H4c-.98 0-2 1.22-2 2.5S3 9 4 9zm9-3h-1v1h1c1 0 2 1.22 2 2.5S13.98 12 13 12H9c-.98 0-2-1.22-2-2.5 0-.83.42-1.64 1-2.09V6.25c-1.09.53-2 1.84-2 3.25C6 11.31 7.55 13 9 13h4c1.45 0 3-1.69 3-3.5S14.5 6 13 6z"></path></svg></a>1. React Props &#x26; State</h3>
+<hr>
 <br>
 <br>
 <h4 id="1-1-props-vs-state" style="position:relative;"><a href="#1-1-props-vs-state" aria-label="1 1 props vs state permalink" class="anchor before"><svg aria-hidden="true" focusable="false" height="16" version="1.1" viewBox="0 0 16 16" width="16"><path fill-rule="evenodd" d="M4 9h1v1H4c-1.5 0-3-1.69-3-3.5S2.55 3 4 3h4c1.45 0 3 1.69 3 3.5 0 1.41-.91 2.72-2 3.25V8.59c.58-.45 1-1.27 1-2.09C10 5.22 8.98 4 8 4H4c-.98 0-2 1.22-2 2.5S3 9 4 9zm9-3h-1v1h1c1 0 2 1.22 2 2.5S13.98 12 13 12H9c-.98 0-2-1.22-2-2.5 0-.83.42-1.64 1-2.09V6.25c-1.09.53-2 1.84-2 3.25C6 11.31 7.55 13 9 13h4c1.45 0 3-1.69 3-3.5S14.5 6 13 6z"></path></svg></a>1-1. Props vs State</h4>
+<hr>
 <ul>
 <li>간단하게 언급하고 가자면, <code class="language-text">props</code>는 외부로 부터 전달받은 값이며, <code class="language-text">state</code>는 컴포넌트 내부에서 변화하는 값이다.</li>
 </ul>
 <br>
 <br>
 <h4 id="1-2-props" style="position:relative;"><a href="#1-2-props" aria-label="1 2 props permalink" class="anchor before"><svg aria-hidden="true" focusable="false" height="16" version="1.1" viewBox="0 0 16 16" width="16"><path fill-rule="evenodd" d="M4 9h1v1H4c-1.5 0-3-1.69-3-3.5S2.55 3 4 3h4c1.45 0 3 1.69 3 3.5 0 1.41-.91 2.72-2 3.25V8.59c.58-.45 1-1.27 1-2.09C10 5.22 8.98 4 8 4H4c-.98 0-2 1.22-2 2.5S3 9 4 9zm9-3h-1v1h1c1 0 2 1.22 2 2.5S13.98 12 13 12H9c-.98 0-2-1.22-2-2.5 0-.83.42-1.64 1-2.09V6.25c-1.09.53-2 1.84-2 3.25C6 11.31 7.55 13 9 13h4c1.45 0 3-1.69 3-3.5S14.5 6 13 6z"></path></svg></a>1-2. Props</h4>
+<hr>
 <ul>
 <li>
 <p>컴포넌트의 속성(property)을 뜻한다. <code class="language-text">props</code>는 변하지 않는 <strong>외부로부터 전달받은 값</strong>으로, 웹 어플리케이션에서 해당 컴포넌트가 가진 속성에 해당된다.</p>
@@ -161,6 +164,7 @@
 <br>
 <br>
 <h4 id="1-3-state" style="position:relative;"><a href="#1-3-state" aria-label="1 3 state permalink" class="anchor before"><svg aria-hidden="true" focusable="false" height="16" version="1.1" viewBox="0 0 16 16" width="16"><path fill-rule="evenodd" d="M4 9h1v1H4c-1.5 0-3-1.69-3-3.5S2.55 3 4 3h4c1.45 0 3 1.69 3 3.5 0 1.41-.91 2.72-2 3.25V8.59c.58-.45 1-1.27 1-2.09C10 5.22 8.98 4 8 4H4c-.98 0-2 1.22-2 2.5S3 9 4 9zm9-3h-1v1h1c1 0 2 1.22 2 2.5S13.98 12 13 12H9c-.98 0-2-1.22-2-2.5 0-.83.42-1.64 1-2.09V6.25c-1.09.53-2 1.84-2 3.25C6 11.31 7.55 13 9 13h4c1.45 0 3-1.69 3-3.5S14.5 6 13 6z"></path></svg></a>1-3. State</h4>
+<hr>
 <ul>
 <li>
 <p>컴포넌트 내부에서 변할 수 있는 값, 즉 상태는 React State로 다뤄야 한다.</p>
@@ -215,6 +219,7 @@
 <br>
 <br>
 <h3 id="2-react-데이터-흐름" style="position:relative;"><a href="#2-react-%EB%8D%B0%EC%9D%B4%ED%84%B0-%ED%9D%90%EB%A6%84" aria-label="2 react 데이터 흐름 permalink" class="anchor before"><svg aria-hidden="true" focusable="false" height="16" version="1.1" viewBox="0 0 16 16" width="16"><path fill-rule="evenodd" d="M4 9h1v1H4c-1.5 0-3-1.69-3-3.5S2.55 3 4 3h4c1.45 0 3 1.69 3 3.5 0 1.41-.91 2.72-2 3.25V8.59c.58-.45 1-1.27 1-2.09C10 5.22 8.98 4 8 4H4c-.98 0-2 1.22-2 2.5S3 9 4 9zm9-3h-1v1h1c1 0 2 1.22 2 2.5S13.98 12 13 12H9c-.98 0-2-1.22-2-2.5 0-.83.42-1.64 1-2.09V6.25c-1.09.53-2 1.84-2 3.25C6 11.31 7.55 13 9 13h4c1.45 0 3-1.69 3-3.5S14.5 6 13 6z"></path></svg></a>2. React 데이터 흐름</h3>
+<hr>
 <ul>
 <li>
 <p>React의 개발 방식의 가장 큰 특징은 페이지 단위가 아닌, <strong>컴포넌트 단위</strong>로 시작한다는 점이 가장 큰 특징이다.</p>
@@ -229,7 +234,11 @@
 </ul>
 <br>
 <br>
-<h3 id="3-react-props--states-실습-a-hrefhttpsgithubcomjh8459im-sprint-react-twittler-state-props-target_blank참조--githuba" style="position:relative;"><a href="#3-react-props--states-%EC%8B%A4%EC%8A%B5-a-hrefhttpsgithubcomjh8459im-sprint-react-twittler-state-props-target_blank%EC%B0%B8%EC%A1%B0--githuba" aria-label="3 react props  states 실습 a hrefhttpsgithubcomjh8459im sprint react twittler state props target_blank참조  githuba permalink" class="anchor before"><svg aria-hidden="true" focusable="false" height="16" version="1.1" viewBox="0 0 16 16" width="16"><path fill-rule="evenodd" d="M4 9h1v1H4c-1.5 0-3-1.69-3-3.5S2.55 3 4 3h4c1.45 0 3 1.69 3 3.5 0 1.41-.91 2.72-2 3.25V8.59c.58-.45 1-1.27 1-2.09C10 5.22 8.98 4 8 4H4c-.98 0-2 1.22-2 2.5S3 9 4 9zm9-3h-1v1h1c1 0 2 1.22 2 2.5S13.98 12 13 12H9c-.98 0-2-1.22-2-2.5 0-.83.42-1.64 1-2.09V6.25c-1.09.53-2 1.84-2 3.25C6 11.31 7.55 13 9 13h4c1.45 0 3-1.69 3-3.5S14.5 6 13 6z"></path></svg></a>3. React Props &#x26; States 실습. <a href="https://github.com/JH8459/im-sprint-react-twittler-state-props" target="_blank">참조 : Github</a></h3>
+<h3 id="3-react-props--states-실습" style="position:relative;"><a href="#3-react-props--states-%EC%8B%A4%EC%8A%B5" aria-label="3 react props  states 실습 permalink" class="anchor before"><svg aria-hidden="true" focusable="false" height="16" version="1.1" viewBox="0 0 16 16" width="16"><path fill-rule="evenodd" d="M4 9h1v1H4c-1.5 0-3-1.69-3-3.5S2.55 3 4 3h4c1.45 0 3 1.69 3 3.5 0 1.41-.91 2.72-2 3.25V8.59c.58-.45 1-1.27 1-2.09C10 5.22 8.98 4 8 4H4c-.98 0-2 1.22-2 2.5S3 9 4 9zm9-3h-1v1h1c1 0 2 1.22 2 2.5S13.98 12 13 12H9c-.98 0-2-1.22-2-2.5 0-.83.42-1.64 1-2.09V6.25c-1.09.53-2 1.84-2 3.25C6 11.31 7.55 13 9 13h4c1.45 0 3-1.69 3-3.5S14.5 6 13 6z"></path></svg></a>3. React Props &#x26; States 실습</h3>
+<hr>
+<blockquote>
+<p><a href="https://github.com/JH8459/im-sprint-react-twittler-state-props" target="_blank">참조 : Github</a></p>
+</blockquote>
 <br>
 <br>
 <h2 id="-understanding" style="position:relative;"><a href="#-understanding" aria-label=" understanding permalink" class="anchor before"><svg aria-hidden="true" focusable="false" height="16" version="1.1" viewBox="0 0 16 16" width="16"><path fill-rule="evenodd" d="M4 9h1v1H4c-1.5 0-3-1.69-3-3.5S2.55 3 4 3h4c1.45 0 3 1.69 3 3.5 0 1.41-.91 2.72-2 3.25V8.59c.58-.45 1-1.27 1-2.09C10 5.22 8.98 4 8 4H4c-.98 0-2 1.22-2 2.5S3 9 4 9zm9-3h-1v1h1c1 0 2 1.22 2 2.5S13.98 12 13 12H9c-.98 0-2-1.22-2-2.5 0-.83.42-1.64 1-2.09V6.25c-1.09.53-2 1.84-2 3.25C6 11.31 7.55 13 9 13h4c1.45 0 3-1.69 3-3.5S14.5 6 13 6z"></path></svg></a>🤔 Understanding</h2>
@@ -259,7 +268,7 @@
 <p><a href="#2-react-%EB%8D%B0%EC%9D%B4%ED%84%B0-%ED%9D%90%EB%A6%84">2. React 데이터 흐름</a></p>
 </li>
 <li>
-<p><a href="#3-react-props--states-%EC%8B%A4%EC%8A%B5-a-hrefhttpsgithubcomjh8459im-sprint-react-twittler-state-props-target_blank%EC%B0%B8%EC%A1%B0--githuba">3. React Props &#x26; States 실습. <a href="https://github.com/JH8459/im-sprint-react-twittler-state-props" target="_blank">참조 : Github</a></a></p>
+<p><a href="#3-react-props--states-%EC%8B%A4%EC%8A%B5">3. React Props &#x26; States 실습</a></p>
 </li>
 </ul>
 </li>
