--- a/2021-08-12-TIL/index.html
+++ b/2021-08-12-TIL/index.html
@@ -95,6 +95,7 @@
 <hr>
 <br>
 <h3 id="1-react-spa-single-page-application" style="position:relative;"><a href="#1-react-spa-single-page-application" aria-label="1 react spa single page application permalink" class="anchor before"><svg aria-hidden="true" focusable="false" height="16" version="1.1" viewBox="0 0 16 16" width="16"><path fill-rule="evenodd" d="M4 9h1v1H4c-1.5 0-3-1.69-3-3.5S2.55 3 4 3h4c1.45 0 3 1.69 3 3.5 0 1.41-.91 2.72-2 3.25V8.59c.58-.45 1-1.27 1-2.09C10 5.22 8.98 4 8 4H4c-.98 0-2 1.22-2 2.5S3 9 4 9zm9-3h-1v1h1c1 0 2 1.22 2 2.5S13.98 12 13 12H9c-.98 0-2-1.22-2-2.5 0-.83.42-1.64 1-2.09V6.25c-1.09.53-2 1.84-2 3.25C6 11.31 7.55 13 9 13h4c1.45 0 3-1.69 3-3.5S14.5 6 13 6z"></path></svg></a>1. React SPA (Single Page Application)</h3>
+<hr>
 <ul>
 <li>
 <p>과거의 브라우저는 웹사이트 페이지 전체를 로딩하였기 때문에 발생하는 리소스 손실이 컸다.</p>
@@ -108,6 +109,7 @@
 <br>
 <br>
 <h4 id="1-1-spa-의-장단점" style="position:relative;"><a href="#1-1-spa-%EC%9D%98-%EC%9E%A5%EB%8B%A8%EC%A0%90" aria-label="1 1 spa 의 장단점 permalink" class="anchor before"><svg aria-hidden="true" focusable="false" height="16" version="1.1" viewBox="0 0 16 16" width="16"><path fill-rule="evenodd" d="M4 9h1v1H4c-1.5 0-3-1.69-3-3.5S2.55 3 4 3h4c1.45 0 3 1.69 3 3.5 0 1.41-.91 2.72-2 3.25V8.59c.58-.45 1-1.27 1-2.09C10 5.22 8.98 4 8 4H4c-.98 0-2 1.22-2 2.5S3 9 4 9zm9-3h-1v1h1c1 0 2 1.22 2 2.5S13.98 12 13 12H9c-.98 0-2-1.22-2-2.5 0-.83.42-1.64 1-2.09V6.25c-1.09.53-2 1.84-2 3.25C6 11.31 7.55 13 9 13h4c1.45 0 3-1.69 3-3.5S14.5 6 13 6z"></path></svg></a>1-1. SPA 의 장단점</h4>
+<hr>
 <p><strong>1. 장점</strong></p>
 <ul>
 <li>
@@ -134,10 +136,15 @@
 </ul>
 <br>
 <br>
-<h4 id="1-2-react-spa-실습-a-hrefhttpsgithubcomjh8459im-sprint-react-twittler-spa-target_blank-참조--github-a" style="position:relative;"><a href="#1-2-react-spa-%EC%8B%A4%EC%8A%B5-a-hrefhttpsgithubcomjh8459im-sprint-react-twittler-spa-target_blank-%EC%B0%B8%EC%A1%B0--github-a" aria-label="1 2 react spa 실습 a hrefhttpsgithubcomjh8459im sprint react twittler spa target_blank 참조  github a permalink" class="anchor before"><svg aria-hidden="true" focusable="false" height="16" version="1.1" viewBox="0 0 16 16" width="16"><path fill-rule="evenodd" d="M4 9h1v1H4c-1.5 0-3-1.69-3-3.5S2.55 3 4 3h4c1.45 0 3 1.69 3 3.5 0 1.41-.91 2.72-2 3.25V8.59c.58-.45 1-1.27 1-2.09C10 5.22 8.98 4 8 4H4c-.98 0-2 1.22-2 2.5S3 9 4 9zm9-3h-1v1h1c1 0 2 1.22 2 2.5S13.98 12 13 12H9c-.98 0-2-1.22-2-2.5 0-.83.42-1.64 1-2.09V6.25c-1.09.53-2 1.84-2 3.25C6 11.31 7.55 13 9 13h4c1.45 0 3-1.69 3-3.5S14.5 6 13 6z"></path></svg></a>1-2. React SPA 실습. <a href="https://github.com/JH8459/im-sprint-react-twittler-spa" target="_blank"> 참조 : Github </a></h4>
+<h4 id="1-2-react-spa-실습" style="position:relative;"><a href="#1-2-react-spa-%EC%8B%A4%EC%8A%B5" aria-label="1 2 react spa 실습 permalink" class="anchor before"><svg aria-hidden="true" focusable="false" height="16" version="1.1" viewBox="0 0 16 16" width="16"><path fill-rule="evenodd" d="M4 9h1v1H4c-1.5 0-3-1.69-3-3.5S2.55 3 4 3h4c1.45 0 3 1.69 3 3.5 0 1.41-.91 2.72-2 3.25V8.59c.58-.45 1-1.27 1-2.09C10 5.22 8.98 4 8 4H4c-.98 0-2 1.22-2 2.5S3 9 4 9zm9-3h-1v1h1c1 0 2 1.22 2 2.5S13.98 12 13 12H9c-.98 0-2-1.22-2-2.5 0-.83.42-1.64 1-2.09V6.25c-1.09.53-2 1.84-2 3.25C6 11.31 7.55 13 9 13h4c1.45 0 3-1.69 3-3.5S14.5 6 13 6z"></path></svg></a>1-2. React SPA 실습</h4>
+<hr>
+<blockquote>
+<p><a href="https://github.com/JH8459/im-sprint-react-twittler-spa" target="_blank"> 참조 : Github </a></p>
+</blockquote>
 <br>
 <br>
 <h3 id="2-react-router" style="position:relative;"><a href="#2-react-router" aria-label="2 react router permalink" class="anchor before"><svg aria-hidden="true" focusable="false" height="16" version="1.1" viewBox="0 0 16 16" width="16"><path fill-rule="evenodd" d="M4 9h1v1H4c-1.5 0-3-1.69-3-3.5S2.55 3 4 3h4c1.45 0 3 1.69 3 3.5 0 1.41-.91 2.72-2 3.25V8.59c.58-.45 1-1.27 1-2.09C10 5.22 8.98 4 8 4H4c-.98 0-2 1.22-2 2.5S3 9 4 9zm9-3h-1v1h1c1 0 2 1.22 2 2.5S13.98 12 13 12H9c-.98 0-2-1.22-2-2.5 0-.83.42-1.64 1-2.09V6.25c-1.09.53-2 1.84-2 3.25C6 11.31 7.55 13 9 13h4c1.45 0 3-1.69 3-3.5S14.5 6 13 6z"></path></svg></a>2. React Router</h3>
+<hr>
 <ul>
 <li>
 <p>SPA는 하나의 페이지를 가지고 있지만, 한 종류의 화면만 사용하지는 않는다.</p>
@@ -151,6 +158,7 @@
 <br>
 <br>
 <h4 id="2-1-react-router란" style="position:relative;"><a href="#2-1-react-router%EB%9E%80" aria-label="2 1 react router란 permalink" class="anchor before"><svg aria-hidden="true" focusable="false" height="16" version="1.1" viewBox="0 0 16 16" width="16"><path fill-rule="evenodd" d="M4 9h1v1H4c-1.5 0-3-1.69-3-3.5S2.55 3 4 3h4c1.45 0 3 1.69 3 3.5 0 1.41-.91 2.72-2 3.25V8.59c.58-.45 1-1.27 1-2.09C10 5.22 8.98 4 8 4H4c-.98 0-2 1.22-2 2.5S3 9 4 9zm9-3h-1v1h1c1 0 2 1.22 2 2.5S13.98 12 13 12H9c-.98 0-2-1.22-2-2.5 0-.83.42-1.64 1-2.09V6.25c-1.09.53-2 1.84-2 3.25C6 11.31 7.55 13 9 13h4c1.45 0 3-1.69 3-3.5S14.5 6 13 6z"></path></svg></a>2-1. React Router란?</h4>
+<hr>
 <ul>
 <li>
 <p>React Router의 주요 컴포넌트는 크게 3가지 이다.</p>
@@ -170,7 +178,11 @@
 </ul>
 <br>
 <br>
-<h4 id="2-2-react-router-실습-a-hrefhttpsgithubcomjh8459codestatestreemasterreactreact-router-target_blank-참조--github-a" style="position:relative;"><a href="#2-2-react-router-%EC%8B%A4%EC%8A%B5-a-hrefhttpsgithubcomjh8459codestatestreemasterreactreact-router-target_blank-%EC%B0%B8%EC%A1%B0--github-a" aria-label="2 2 react router 실습 a hrefhttpsgithubcomjh8459codestatestreemasterreactreact router target_blank 참조  github a permalink" class="anchor before"><svg aria-hidden="true" focusable="false" height="16" version="1.1" viewBox="0 0 16 16" width="16"><path fill-rule="evenodd" d="M4 9h1v1H4c-1.5 0-3-1.69-3-3.5S2.55 3 4 3h4c1.45 0 3 1.69 3 3.5 0 1.41-.91 2.72-2 3.25V8.59c.58-.45 1-1.27 1-2.09C10 5.22 8.98 4 8 4H4c-.98 0-2 1.22-2 2.5S3 9 4 9zm9-3h-1v1h1c1 0 2 1.22 2 2.5S13.98 12 13 12H9c-.98 0-2-1.22-2-2.5 0-.83.42-1.64 1-2.09V6.25c-1.09.53-2 1.84-2 3.25C6 11.31 7.55 13 9 13h4c1.45 0 3-1.69 3-3.5S14.5 6 13 6z"></path></svg></a>2-2. React Router 실습. <a href="https://github.com/JH8459/CodeStates/tree/master/React/react-router" target="_blank"> 참조 : Github </a></h4>
+<h4 id="2-2-react-router-실습" style="position:relative;"><a href="#2-2-react-router-%EC%8B%A4%EC%8A%B5" aria-label="2 2 react router 실습 permalink" class="anchor before"><svg aria-hidden="true" focusable="false" height="16" version="1.1" viewBox="0 0 16 16" width="16"><path fill-rule="evenodd" d="M4 9h1v1H4c-1.5 0-3-1.69-3-3.5S2.55 3 4 3h4c1.45 0 3 1.69 3 3.5 0 1.41-.91 2.72-2 3.25V8.59c.58-.45 1-1.27 1-2.09C10 5.22 8.98 4 8 4H4c-.98 0-2 1.22-2 2.5S3 9 4 9zm9-3h-1v1h1c1 0 2 1.22 2 2.5S13.98 12 13 12H9c-.98 0-2-1.22-2-2.5 0-.83.42-1.64 1-2.09V6.25c-1.09.53-2 1.84-2 3.25C6 11.31 7.55 13 9 13h4c1.45 0 3-1.69 3-3.5S14.5 6 13 6z"></path></svg></a>2-2. React Router 실습</h4>
+<hr>
+<blockquote>
+<p><a href="https://github.com/JH8459/CodeStates/tree/master/React/react-router" target="_blank"> 참조 : Github </a></p>
+</blockquote>
 <br>
 <br>
 <h2 id="-understanding" style="position:relative;"><a href="#-understanding" aria-label=" understanding permalink" class="anchor before"><svg aria-hidden="true" focusable="false" height="16" version="1.1" viewBox="0 0 16 16" width="16"><path fill-rule="evenodd" d="M4 9h1v1H4c-1.5 0-3-1.69-3-3.5S2.55 3 4 3h4c1.45 0 3 1.69 3 3.5 0 1.41-.91 2.72-2 3.25V8.59c.58-.45 1-1.27 1-2.09C10 5.22 8.98 4 8 4H4c-.98 0-2 1.22-2 2.5S3 9 4 9zm9-3h-1v1h1c1 0 2 1.22 2 2.5S13.98 12 13 12H9c-.98 0-2-1.22-2-2.5 0-.83.42-1.64 1-2.09V6.25c-1.09.53-2 1.84-2 3.25C6 11.31 7.55 13 9 13h4c1.45 0 3-1.69 3-3.5S14.5 6 13 6z"></path></svg></a>🤔 Understanding</h2>
@@ -194,14 +206,14 @@
 <p><a href="#1-react-spa-single-page-application">1. React SPA (Single Page Application)</a></p>
 <ul>
 <li><a href="#1-1-spa-%EC%9D%98-%EC%9E%A5%EB%8B%A8%EC%A0%90">1-1. SPA 의 장단점</a></li>
-<li><a href="#1-2-react-spa-%EC%8B%A4%EC%8A%B5-a-hrefhttpsgithubcomjh8459im-sprint-react-twittler-spa-target_blank-%EC%B0%B8%EC%A1%B0--github-a">1-2. React SPA 실습. <a href="https://github.com/JH8459/im-sprint-react-twittler-spa" target="_blank"> 참조 : Github </a></a></li>
+<li><a href="#1-2-react-spa-%EC%8B%A4%EC%8A%B5">1-2. React SPA 실습</a></li>
 </ul>
 </li>
 <li>
 <p><a href="#2-react-router">2. React Router</a></p>
 <ul>
 <li><a href="#2-1-react-router%EB%9E%80">2-1. React Router란?</a></li>
-<li><a href="#2-2-react-router-%EC%8B%A4%EC%8A%B5-a-hrefhttpsgithubcomjh8459codestatestreemasterreactreact-router-target_blank-%EC%B0%B8%EC%A1%B0--github-a">2-2. React Router 실습. <a href="https://github.com/JH8459/CodeStates/tree/master/React/react-router" target="_blank"> 참조 : Github </a></a></li>
+<li><a href="#2-2-react-router-%EC%8B%A4%EC%8A%B5">2-2. React Router 실습</a></li>
 </ul>
 </li>
 </ul>
