--- a/2023-03-20-BOOK/index.html
+++ b/2023-03-20-BOOK/index.html
@@ -186,7 +186,7 @@
 <p>기발한 이름은 피하자.</p>
 <blockquote>
 <p>“성명”을 “성”과 “이름” 두가지 변수로 구분해야한다면..</p>
-<p>성을 <code class="language-text">name1</code> 이름을 <code class="language-text">name2</code> 으로 짓는 기발한(?) 행위는 피하자.</p>
+<p>성을 <code class="language-text">name1</code> 이름을 <code class="language-text">name2</code> 으로 짓는 기발한(?) 행위는 피하자. <code class="language-text">firstName / lastName</code>이라는 좋은 선택지가 있다.</p>
 </blockquote>
 </li>
 </ul>
