--- a/2023-12-30-RETROSPECT/index.html
+++ b/2023-12-30-RETROSPECT/index.html
@@ -214,7 +214,13 @@
     </span></p>
 <center><del>내돈내산</del></center>
 <br>
-<p>동영상 강의보다는 짧게 짧게 틈틈히 읽어나갈 수 있는 서적을 선택했다.</p>
+<p>동영상 강의보다는 짧게 짧게 틈틈히 읽어나갈 수 있는 서적(E-Book)을 선택했다.</p>
+<br>
+<blockquote>
+<p>참고 서적 📖</p>
+<p><a href="https://product.kyobobook.co.kr/detail/S000001818060" target="_blank">Do it! 알고리즘 코딩 테스트 - 자바 편</a></p>
+</blockquote>
+<br>
 <p>다만, 아직 서적을 절반도 보지 못해서 평가를 하거나 후기(모두 다 읽으면 도서 후기로 남기도록 하겠다.)를 남기는건 시기상조이다.</p>
 <p>현재는 알고리즘 유형마다 적용할 수 있는 핵심 로직들을 서적을 토대로 학습한 후, 관련 유형의 문제들을 키워드로 검색 후 반복해서 익숙해질 때까지 풀어보는 학습 방법으로 알고리즘 공부를 하고 있다.</p>
 <br>
