--- a/2024-04-18-TIL/index.html
+++ b/2024-04-18-TIL/index.html
@@ -196,8 +196,8 @@
 <br>
 <h2 id="-understanding" style="position:relative;"><a href="#-understanding" aria-label=" understanding permalink" class="anchor before"><svg aria-hidden="true" focusable="false" height="16" version="1.1" viewBox="0 0 16 16" width="16"><path fill-rule="evenodd" d="M4 9h1v1H4c-1.5 0-3-1.69-3-3.5S2.55 3 4 3h4c1.45 0 3 1.69 3 3.5 0 1.41-.91 2.72-2 3.25V8.59c.58-.45 1-1.27 1-2.09C10 5.22 8.98 4 8 4H4c-.98 0-2 1.22-2 2.5S3 9 4 9zm9-3h-1v1h1c1 0 2 1.22 2 2.5S13.98 12 13 12H9c-.98 0-2-1.22-2-2.5 0-.83.42-1.64 1-2.09V6.25c-1.09.53-2 1.84-2 3.25C6 11.31 7.55 13 9 13h4c1.45 0 3-1.69 3-3.5S14.5 6 13 6z"></path></svg></a>🤔 Understanding</h2>
 <hr>
-<p>작년엔 구현에 집중했다면, 올해는 불편했던 기능들을 하나씩 자동화 구현을 위해 노력해 볼 예정이다.</p>
-<p>추후엔 Bash Script를 이용하여 사람이 하드웨어 리소스는 관여 안 할 수 있게끔 구현해보려한다.</p>
+<p>작년엔 구현에 집중했다면, 올해는 불편한 부분들을 하나씩 개선하는데 집중해 볼 예정이다.</p>
+<p>추후엔 Bash Script를 더욱 개선하여 사람이 직접 관여하여 리소스를 관리하는 상황이 발생 안 할 수 있게끔 해보려한다.</p>
 <p>계약기간에 따라 다운로드 링크 제공 기간이 지난 리소스들은 백업 스토리지 공간으로 옮기고, 보관 기간이 지난 영상들은 리소스를 완전 삭제하는 기능까지 구현해 볼 예정이다.</p>
 <br>
 <br>
