--- a/2024-04-09-BOOK/index.html
+++ b/2024-04-09-BOOK/index.html
@@ -118,7 +118,7 @@
 <p>1장에서는 <strong>“특이점”</strong>에 대해 아래와 같이 설명한다.</p>
 <br>
 <blockquote>
-<p>“특이점이란 폭발적으로 AI의 지능이 증가하는 지점을 의미한다. 이것은 AI가 자신보다 아주 조금이라도 똑똑한 AI를 만들어 내는 순간 가능해진다.</p>
+<p>“특이점이란 폭발적으로 AI의 지능이 증가하는 지점을 의미한다. 이것은 AI가 자신보다 아주 조금이라도 똑똑한 AI를 만들어 내는 순간 가능해진다.”</p>
 </blockquote>
 <br>
 <p><span
@@ -184,7 +184,7 @@
 <hr>
 <p>이 챕터의 주된 내용은 아래와 같다.</p>
 <blockquote>
-<center>데이터가 알고리즘보다 중요하다.</center>
+<center>"데이터가 알고리즘보다 중요하다."</center>
 </blockquote>
 <br>
 <p>수많은 공식이 중첩된 논리적 판단보다는 데이터베이스의 경험을 참조로 하는 개연적 판단이 주가 된 것이라 말하는 바이다.</p>
@@ -204,7 +204,7 @@
 <p>3장부터는 인문학적인 이야기보다는 <strong>“소프트웨어를 어떻게 만들어야하는가?”</strong> 라는 개발론에 대한 이야기가 많았다.</p>
 <p>이번 챕터에는 재밌는 구문이 있어서 가져와보았다.</p>
 <blockquote>
-<center>내가 해야 해 증후군</center>
+<center>"내가 해야 해 증후군"</center>
 </blockquote>
 <p>보통 고참이고 실력이 뛰어난 개발자들에게 나오는 증후군이라 설명한다.<br></p>
 <center><del>책을 읽으며 회사 내의 특정인물들이 떠올라 토론시간에 언급해보니 모두 같은.. 생각을 하는구나.. 🤣🤣</del></center>
