--- a/2024-05-01-TIL/index.html
+++ b/2024-05-01-TIL/index.html
@@ -177,7 +177,7 @@
     </span></p>
 <center>한계 없이 DB에 쌓이는 무수한 데이터들..😮</center><br>
 <br>
-<p>기존 서비스는 Mysql의 <code class="language-text">LIKE</code> 기능을 이용한 검색 방식을 사용하고 있었다. 이는 띄어쓰기나 단어의 순서등 검색어가 정확히 일치해야했기 때문에 기능적인 측면에서 부족함이 많았다.</p>
+<p>기존 서비스는 SQL <code class="language-text">LIKE</code> 쿼리를 이용한 검색 방식을 사용하고 있었다. 이는 띄어쓰기나 단어의 순서등 검색어가 정확히 일치해야했기 때문에 기능적인 측면에서 부족함이 많았다.</p>
 <p>또한, Q&#x26;A 테이블 특성상 한계없이 쌓이기 떄문에 이는 장기적으로 검색 속도에서도 저하가 올거라 예측되었기에 검색 엔진의 도입을 결정하게 되었다.</p>
 <p>독보적인 사용량과 수많은 레퍼런스를 자랑하는 Elasticsearch을 도입하지 않을 이유가 없었다.</p>
 <br>
