--- a/2024-07-11-TIL/index.html
+++ b/2024-07-11-TIL/index.html
@@ -173,8 +173,8 @@
 <h2 id="-understanding" style="position:relative;"><a href="#-understanding" aria-label=" understanding permalink" class="anchor before"><svg aria-hidden="true" focusable="false" height="16" version="1.1" viewBox="0 0 16 16" width="16"><path fill-rule="evenodd" d="M4 9h1v1H4c-1.5 0-3-1.69-3-3.5S2.55 3 4 3h4c1.45 0 3 1.69 3 3.5 0 1.41-.91 2.72-2 3.25V8.59c.58-.45 1-1.27 1-2.09C10 5.22 8.98 4 8 4H4c-.98 0-2 1.22-2 2.5S3 9 4 9zm9-3h-1v1h1c1 0 2 1.22 2 2.5S13.98 12 13 12H9c-.98 0-2-1.22-2-2.5 0-.83.42-1.64 1-2.09V6.25c-1.09.53-2 1.84-2 3.25C6 11.31 7.55 13 9 13h4c1.45 0 3-1.69 3-3.5S14.5 6 13 6z"></path></svg></a>🤔 Understanding</h2>
 <hr>
 <p>오랫만에 다시 알고리즘 문제 풀이를 손에 잡으려한다.</p>
-<p>익숙한 언어인 <code class="language-text">JavaScript</code>로 문제를 풀이했다면 배열에 담고 <code class="language-text">toLowerCase()</code> 메서드로 소문자로 변환한 값들을 <code class="language-text">sort</code>로 정렬하여 문제를 풀었어야할 문제였다.</p>
-<p><code class="language-text">Java</code> 진영에서는 <code class="language-text">compareToIgnoreCase</code> 메서드 한번 호출로 문제를 풀이할 수 있다는 점에서 느끼는바가 많았다.</p>
+<p>익숙한 언어인 <code class="language-text">JavaScript</code>로 문제를 풀이했다면 배열에 담고 <code class="language-text">toLowerCase()</code> 메서드로 소문자로 변환한 값들을 <code class="language-text">sort</code>로 정렬하여 문제를 풀었어야 할 문제였다.</p>
+<p><code class="language-text">Java</code> 진영에서는 <code class="language-text">compareToIgnoreCase</code> 한번의 메서드 호출로 문제를 풀이할 수 있다는 점에서 느끼는바가 많았다.</p>
 <ul>
 <li><code class="language-text">Java</code>에서 제공하는 표준 라이브러리의 방대함</li>
 <li>제공된 기본 메서드를 사용하게 된다면, 일관된 행동을 보장하므로 협업 시 코드의 예측 가능성이 높을 거란 장점</li>
