--- a/2024-07-15-TIL/index.html
+++ b/2024-07-15-TIL/index.html
@@ -158,7 +158,23 @@
 <h3 id="2-테스트-커버리지-100" style="position:relative;"><a href="#2-%ED%85%8C%EC%8A%A4%ED%8A%B8-%EC%BB%A4%EB%B2%84%EB%A6%AC%EC%A7%80-100" aria-label="2 테스트 커버리지 100 permalink" class="anchor before"><svg aria-hidden="true" focusable="false" height="16" version="1.1" viewBox="0 0 16 16" width="16"><path fill-rule="evenodd" d="M4 9h1v1H4c-1.5 0-3-1.69-3-3.5S2.55 3 4 3h4c1.45 0 3 1.69 3 3.5 0 1.41-.91 2.72-2 3.25V8.59c.58-.45 1-1.27 1-2.09C10 5.22 8.98 4 8 4H4c-.98 0-2 1.22-2 2.5S3 9 4 9zm9-3h-1v1h1c1 0 2 1.22 2 2.5S13.98 12 13 12H9c-.98 0-2-1.22-2-2.5 0-.83.42-1.64 1-2.09V6.25c-1.09.53-2 1.84-2 3.25C6 11.31 7.55 13 9 13h4c1.45 0 3-1.69 3-3.5S14.5 6 13 6z"></path></svg></a>2. 테스트 커버리지 100%</h3>
 <hr>
 <p>여러 레퍼런스를 찾는 도중 <strong>SLASH21</strong>에서 토스뱅크 서버 개발자인 이응준님의 <a href="https://toss.im/slash-21/sessions/1-6" target="_blank">테스트 커버리지 100%</a> 영상을 보고 <strong>“충분한”</strong>의 기준을 결정하였다.</p>
-<p><br><center><iframe width="560" height="315" src="https://www.youtube.com/embed/jdlBu2vFv58?si=hn9E3KSIDO53WaKR" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe></center><br></p>
+<style>
+  .responsive-iframe-container {
+    position: relative;
+    overflow: hidden;
+    padding-top: 56.25%;
+  }
+
+  .responsive-iframe-container iframe {
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    border: 0;
+  }
+</style>
+<div class="responsive-iframe-container"><iframe width="560" height="315" src="https://www.youtube.com/embed/jdlBu2vFv58?si=hn9E3KSIDO53WaKR" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe></div>
 <p>위 영상은 테스트 커버리지 100%(인스트럭션 기준)까지 달성한 과정을 자세히 설명해주는 영상이며 요약하자면 아래와 같다.</p>
 <ul>
 <li>총 커밋의 23% 가량은 테스트 코드에 할애하였다.</li>
