--- a/2024-11-12-TIL/index.html
+++ b/2024-11-12-TIL/index.html
@@ -224,10 +224,78 @@
 <br>
 <h5 id="4-3-1-확장-가능하고-느슨하게-결합된-아키텍처-설계" style="position:relative;"><a href="#4-3-1-%ED%99%95%EC%9E%A5-%EA%B0%80%EB%8A%A5%ED%95%98%EA%B3%A0-%EB%8A%90%EC%8A%A8%ED%95%98%EA%B2%8C-%EA%B2%B0%ED%95%A9%EB%90%9C-%EC%95%84%ED%82%A4%ED%85%8D%EC%B2%98-%EC%84%A4%EA%B3%84" aria-label="4 3 1 확장 가능하고 느슨하게 결합된 아키텍처 설계 permalink" class="anchor before"><svg aria-hidden="true" focusable="false" height="16" version="1.1" viewBox="0 0 16 16" width="16"><path fill-rule="evenodd" d="M4 9h1v1H4c-1.5 0-3-1.69-3-3.5S2.55 3 4 3h4c1.45 0 3 1.69 3 3.5 0 1.41-.91 2.72-2 3.25V8.59c.58-.45 1-1.27 1-2.09C10 5.22 8.98 4 8 4H4c-.98 0-2 1.22-2 2.5S3 9 4 9zm9-3h-1v1h1c1 0 2 1.22 2 2.5S13.98 12 13 12H9c-.98 0-2-1.22-2-2.5 0-.83.42-1.64 1-2.09V6.25c-1.09.53-2 1.84-2 3.25C6 11.31 7.55 13 9 13h4c1.45 0 3-1.69 3-3.5S14.5 6 13 6z"></path></svg></a>4-3-1. 확장 가능하고 느슨하게 결합된 아키텍처 설계</h5>
 <hr>
+<ul>
+<li>요구 사항을 기반으로 이벤트 중심, 마이로서비스 또는 멀티 티어 아키텍처 설계</li>
+<li>아키텍처 설계에 사용되는 구성 요소에 대한 크기 조정 전략 결정</li>
+<li>느슨한 결합을 달성하는 데 필요한 AWS 서비스 결정</li>
+<li>컨테이너를 사용해야 할 경우 결정</li>
+<li>서버리스 기술 및 패턴을 사용해야 할 경우 결정</li>
+<li>요구 사항을 기반으로 적절한 컴퓨팅, 스토리지, 네트워킹 및 데이터베이스 기술 권장</li>
+<li>워크로드에 목적 기반 AWS 서비스 사용</li>
+</ul>
+<p>가용성 및 내결함성을 고려하는 아키텍처를 고려하기 위해 위 요소를 강조한다.</p>
+<br>
+<details>
+  <summary>연습 문제</summary>
+<img src="https://jh8459.s3.ap-northeast-2.amazonaws.com/blog/2024-11-12-TIL/4-3-1.png">
+</details>
 <br>
 <br>
 <h5 id="4-3-2-고가용성-및-내결함성-아키텍처-설계" style="position:relative;"><a href="#4-3-2-%EA%B3%A0%EA%B0%80%EC%9A%A9%EC%84%B1-%EB%B0%8F-%EB%82%B4%EA%B2%B0%ED%95%A8%EC%84%B1-%EC%95%84%ED%82%A4%ED%85%8D%EC%B2%98-%EC%84%A4%EA%B3%84" aria-label="4 3 2 고가용성 및 내결함성 아키텍처 설계 permalink" class="anchor before"><svg aria-hidden="true" focusable="false" height="16" version="1.1" viewBox="0 0 16 16" width="16"><path fill-rule="evenodd" d="M4 9h1v1H4c-1.5 0-3-1.69-3-3.5S2.55 3 4 3h4c1.45 0 3 1.69 3 3.5 0 1.41-.91 2.72-2 3.25V8.59c.58-.45 1-1.27 1-2.09C10 5.22 8.98 4 8 4H4c-.98 0-2 1.22-2 2.5S3 9 4 9zm9-3h-1v1h1c1 0 2 1.22 2 2.5S13.98 12 13 12H9c-.98 0-2-1.22-2-2.5 0-.83.42-1.64 1-2.09V6.25c-1.09.53-2 1.84-2 3.25C6 11.31 7.55 13 9 13h4c1.45 0 3-1.69 3-3.5S14.5 6 13 6z"></path></svg></a>4-3-2. 고가용성 및 내결함성 아키텍처 설계</h5>
 <hr>
+<p>전반적으로 <strong>4-3-1.</strong> 내용과 거의 유사하지만, 아래의 요인들을 중점으로 둔 시스템 설계이다.</p>
+<ul>
+<li>고가용성: <strong>고가용성</strong> 설계는 가동 중단 시간을 최소화하기 위한 설계를 의미한다.</li>
+<li>내결함성: <strong>내결함성</strong> 설계는 가동 중단이 없도록 설계하는 것을 의미한다.</li>
+</ul>
+<p>또한, 재해시 복구 설계(시스템이 재해 상황중에도 작동하도록 설계하는 것)까지 고려한다는 점을 차이점으로 둘 수 있다. 재해 복구시에는 목표를 설정하여 복구해야한다 강조한다.</p>
+<ul>
+<li>복구 시점 목표 (RPO): 마지막 데이터 복구 시점 이후 허용되는 최대 시간. 즉, 백업 주기를 일컫는다.</li>
+<li>복구 시간 목표 (RTO): 서비스 중단 시점과 서비스 복원 시점 사이에 허용되는 최대 시간. 즉, 서비스 복구에 필요한 최대 지연 시간을 일컫는다.</li>
+</ul>
+<p>이 목표의 요구치에 따라 여러 재해 복구 전략을 간단하게 소개하며, 중점으로 볼 영역으로는 아래와 같은 작업을 수행하는 방법에 대해 추가 학습을 권유한다.</p>
+<ul>
+<li>인프라 무결성을 보장하기 위한 자동화 전략 결정</li>
+<li>AWS 리전 또는 가용 영역 전반에서 고가용성 또는 내결함성 아키텍처를 제공하는 데 필요한 AWS 서비스 결정</li>
+<li>비즈니스 요구 사항에 따라 지표 식별</li>
+<li>단일 장애 지점을 완화하기 위한 설계 구현</li>
+<li>데이터의 내구성 및 가용성을 보장하기 위한 전략 구현</li>
+<li>비즈니스 요구 사항을 충족하는 적절한 DR 전략 선택</li>
+<li>레거시 애플리케이션 및 클라우드용으로 구축되지 않은 애플리케이션의 신뢰성을 향상하는 AWS 서비스 사용</li>
+<li>워크로드에 목적 기반 AWS 서비스 사용</li>
+</ul>
+<br>
+<details>
+  <summary>연습 문제</summary>
+<img src="https://jh8459.s3.ap-northeast-2.amazonaws.com/blog/2024-11-12-TIL/4-3-2.png">
+</details>
+<br>
+<br>
+<h4 id="4-4-고성능-아키텍처-설계" style="position:relative;"><a href="#4-4-%EA%B3%A0%EC%84%B1%EB%8A%A5-%EC%95%84%ED%82%A4%ED%85%8D%EC%B2%98-%EC%84%A4%EA%B3%84" aria-label="4 4 고성능 아키텍처 설계 permalink" class="anchor before"><svg aria-hidden="true" focusable="false" height="16" version="1.1" viewBox="0 0 16 16" width="16"><path fill-rule="evenodd" d="M4 9h1v1H4c-1.5 0-3-1.69-3-3.5S2.55 3 4 3h4c1.45 0 3 1.69 3 3.5 0 1.41-.91 2.72-2 3.25V8.59c.58-.45 1-1.27 1-2.09C10 5.22 8.98 4 8 4H4c-.98 0-2 1.22-2 2.5S3 9 4 9zm9-3h-1v1h1c1 0 2 1.22 2 2.5S13.98 12 13 12H9c-.98 0-2-1.22-2-2.5 0-.83.42-1.64 1-2.09V6.25c-1.09.53-2 1.84-2 3.25C6 11.31 7.55 13 9 13h4c1.45 0 3-1.69 3-3.5S14.5 6 13 6z"></path></svg></a>4-4. 고성능 아키텍처 설계</h4>
+<hr>
+<p>고성능 솔루션을 설계할 때 고려해야 할 주요 계층으로 아래 요인들을 꼽는다.</p>
+<ul>
+<li>컴퓨팅 계층</li>
+<li>스토리지 계층</li>
+<li>데이터베이스 계층</li>
+<li>네트워크 계층</li>
+</ul>
+<p>위와 더불어 데이터 수집 및 변환 솔루션을 중점적으로 학습해야 한다 강조한다.</p>
+<br>
+<br>
+<h5 id="4-4-1-고성능-및-확장-가능한-스토리지-솔루션-결정" style="position:relative;"><a href="#4-4-1-%EA%B3%A0%EC%84%B1%EB%8A%A5-%EB%B0%8F-%ED%99%95%EC%9E%A5-%EA%B0%80%EB%8A%A5%ED%95%9C-%EC%8A%A4%ED%86%A0%EB%A6%AC%EC%A7%80-%EC%86%94%EB%A3%A8%EC%85%98-%EA%B2%B0%EC%A0%95" aria-label="4 4 1 고성능 및 확장 가능한 스토리지 솔루션 결정 permalink" class="anchor before"><svg aria-hidden="true" focusable="false" height="16" version="1.1" viewBox="0 0 16 16" width="16"><path fill-rule="evenodd" d="M4 9h1v1H4c-1.5 0-3-1.69-3-3.5S2.55 3 4 3h4c1.45 0 3 1.69 3 3.5 0 1.41-.91 2.72-2 3.25V8.59c.58-.45 1-1.27 1-2.09C10 5.22 8.98 4 8 4H4c-.98 0-2 1.22-2 2.5S3 9 4 9zm9-3h-1v1h1c1 0 2 1.22 2 2.5S13.98 12 13 12H9c-.98 0-2-1.22-2-2.5 0-.83.42-1.64 1-2.09V6.25c-1.09.53-2 1.84-2 3.25C6 11.31 7.55 13 9 13h4c1.45 0 3-1.69 3-3.5S14.5 6 13 6z"></path></svg></a>4-4-1. 고성능 및 확장 가능한 스토리지 솔루션 결정</h5>
+<hr>
+<p>AWS에서 스토리지는 크게 세가지 형태로 존재하며 대표적인 서비스는 아래와 같다.</p>
+<ul>
+<li>객체 (Amazon S3)</li>
+<li>블록 (Amazon EBS)</li>
+<li>파일 (Amazon EFS)</li>
+</ul>
+<p>아키텍처는 애플리케이션에 알맞는 스토리지 솔루션을 결정할 줄 알아야한다 강조한다. 이번 장을 요약하자면 아래와 같다. <del>(스토리지 솔루션의 연습문제는 없다.)</del></p>
+<ul>
+<li>성능 요구를 충족하는 스토리지 서비스 및 구성 결정</li>
+<li>향후 요구 사항을 수용하도록 크기를 유연하게 조정할 수 있는 스토리지 서비스 결정</li>
+</ul>
 <br>
 <br>
 <h3 id="5-시험-등록" style="position:relative;"><a href="#5-%EC%8B%9C%ED%97%98-%EB%93%B1%EB%A1%9D" aria-label="5 시험 등록 permalink" class="anchor before"><svg aria-hidden="true" focusable="false" height="16" version="1.1" viewBox="0 0 16 16" width="16"><path fill-rule="evenodd" d="M4 9h1v1H4c-1.5 0-3-1.69-3-3.5S2.55 3 4 3h4c1.45 0 3 1.69 3 3.5 0 1.41-.91 2.72-2 3.25V8.59c.58-.45 1-1.27 1-2.09C10 5.22 8.98 4 8 4H4c-.98 0-2 1.22-2 2.5S3 9 4 9zm9-3h-1v1h1c1 0 2 1.22 2 2.5S13.98 12 13 12H9c-.98 0-2-1.22-2-2.5 0-.83.42-1.64 1-2.09V6.25c-1.09.53-2 1.84-2 3.25C6 11.31 7.55 13 9 13h4c1.45 0 3-1.69 3-3.5S14.5 6 13 6z"></path></svg></a>5. 시험 등록</h3>
@@ -274,6 +342,12 @@
 <ul>
 <li><a href="#4-3-1-%ED%99%95%EC%9E%A5-%EA%B0%80%EB%8A%A5%ED%95%98%EA%B3%A0-%EB%8A%90%EC%8A%A8%ED%95%98%EA%B2%8C-%EA%B2%B0%ED%95%A9%EB%90%9C-%EC%95%84%ED%82%A4%ED%85%8D%EC%B2%98-%EC%84%A4%EA%B3%84">4-3-1. 확장 가능하고 느슨하게 결합된 아키텍처 설계</a></li>
 <li><a href="#4-3-2-%EA%B3%A0%EA%B0%80%EC%9A%A9%EC%84%B1-%EB%B0%8F-%EB%82%B4%EA%B2%B0%ED%95%A8%EC%84%B1-%EC%95%84%ED%82%A4%ED%85%8D%EC%B2%98-%EC%84%A4%EA%B3%84">4-3-2. 고가용성 및 내결함성 아키텍처 설계</a></li>
+</ul>
+</li>
+<li>
+<p><a href="#4-4-%EA%B3%A0%EC%84%B1%EB%8A%A5-%EC%95%84%ED%82%A4%ED%85%8D%EC%B2%98-%EC%84%A4%EA%B3%84">4-4. 고성능 아키텍처 설계</a></p>
+<ul>
+<li><a href="#4-4-1-%EA%B3%A0%EC%84%B1%EB%8A%A5-%EB%B0%8F-%ED%99%95%EC%9E%A5-%EA%B0%80%EB%8A%A5%ED%95%9C-%EC%8A%A4%ED%86%A0%EB%A6%AC%EC%A7%80-%EC%86%94%EB%A3%A8%EC%85%98-%EA%B2%B0%EC%A0%95">4-4-1. 고성능 및 확장 가능한 스토리지 솔루션 결정</a></li>
 </ul>
 </li>
 </ul>
