--- a/2024-12-22-PROJECT/index.html
+++ b/2024-12-22-PROJECT/index.html
@@ -257,6 +257,15 @@
 </ul>
 <br>
 <br>
+<h4 id="mini" style="position:relative;"><a href="#mini" aria-label="mini permalink" class="anchor before"><svg aria-hidden="true" focusable="false" height="16" version="1.1" viewBox="0 0 16 16" width="16"><path fill-rule="evenodd" d="M4 9h1v1H4c-1.5 0-3-1.69-3-3.5S2.55 3 4 3h4c1.45 0 3 1.69 3 3.5 0 1.41-.91 2.72-2 3.25V8.59c.58-.45 1-1.27 1-2.09C10 5.22 8.98 4 8 4H4c-.98 0-2 1.22-2 2.5S3 9 4 9zm9-3h-1v1h1c1 0 2 1.22 2 2.5S13.98 12 13 12H9c-.98 0-2-1.22-2-2.5 0-.83.42-1.64 1-2.09V6.25c-1.09.53-2 1.84-2 3.25C6 11.31 7.55 13 9 13h4c1.45 0 3-1.69 3-3.5S14.5 6 13 6z"></path></svg></a>MINI</h4>
+<p><img src="/ee95c0da82e204363b4f4c1e51277bd2/bronze_mini.svg" alt="0"></p>
+<p><img src="/9d90f52ee757af20167d46480c9145e7/silver_mini.svg" alt="1"></p>
+<p><img src="/00c07164fcdb075a3c3f31faea74b186/gold_mini.svg" alt="2"></p>
+<p><img src="/af05669233e2f63b5b7b4ef30c512ddd/platinum_mini.svg" alt="3"></p>
+<p><img src="/424565f7b60dc684ecd8c1cb0ca91086/diamond_mini.svg" alt="4"></p>
+<p><img src="/0382ed0d451a5b9e2fe6152e6bf8c255/ruby_mini.svg" alt="5"></p>
+<br>
+<br>
 <h2 id="-understanding" style="position:relative;"><a href="#-understanding" aria-label=" understanding permalink" class="anchor before"><svg aria-hidden="true" focusable="false" height="16" version="1.1" viewBox="0 0 16 16" width="16"><path fill-rule="evenodd" d="M4 9h1v1H4c-1.5 0-3-1.69-3-3.5S2.55 3 4 3h4c1.45 0 3 1.69 3 3.5 0 1.41-.91 2.72-2 3.25V8.59c.58-.45 1-1.27 1-2.09C10 5.22 8.98 4 8 4H4c-.98 0-2 1.22-2 2.5S3 9 4 9zm9-3h-1v1h1c1 0 2 1.22 2 2.5S13.98 12 13 12H9c-.98 0-2-1.22-2-2.5 0-.83.42-1.64 1-2.09V6.25c-1.09.53-2 1.84-2 3.25C6 11.31 7.55 13 9 13h4c1.45 0 3-1.69 3-3.5S14.5 6 13 6z"></path></svg></a>🤔 Understanding</h2>
 <p>알고리즘 문제풀이에 동기부여도 되고 무엇보다 Boj 로고와 결을 같이하기 때문에 아래와 같이 어색함이 없이 깃허브 프로필에서 노출될 수 있다.</p>
 <br>
@@ -291,6 +300,7 @@
 <p><a href="#4-%EA%B2%B0%EA%B3%BC%EB%AC%BC-%EB%AF%B8%EB%A6%AC-%EB%B3%B4%EA%B8%B0">4. 결과물 미리 보기</a></p>
 <ul>
 <li><a href="#%EA%B8%B0%EB%B3%B8%ED%98%95">기본형</a></li>
+<li><a href="#mini">MINI</a></li>
 </ul>
 </li>
 </ul>
