--- a/2025-03-31-TIL/index.html
+++ b/2025-03-31-TIL/index.html
@@ -170,7 +170,7 @@
 <br>
 <h3 id="3-github-actions-살펴보기" style="position:relative;"><a href="#3-github-actions-%EC%82%B4%ED%8E%B4%EB%B3%B4%EA%B8%B0" aria-label="3 github actions 살펴보기 permalink" class="anchor before"><svg aria-hidden="true" focusable="false" height="16" version="1.1" viewBox="0 0 16 16" width="16"><path fill-rule="evenodd" d="M4 9h1v1H4c-1.5 0-3-1.69-3-3.5S2.55 3 4 3h4c1.45 0 3 1.69 3 3.5 0 1.41-.91 2.72-2 3.25V8.59c.58-.45 1-1.27 1-2.09C10 5.22 8.98 4 8 4H4c-.98 0-2 1.22-2 2.5S3 9 4 9zm9-3h-1v1h1c1 0 2 1.22 2 2.5S13.98 12 13 12H9c-.98 0-2-1.22-2-2.5 0-.83.42-1.64 1-2.09V6.25c-1.09.53-2 1.84-2 3.25C6 11.31 7.55 13 9 13h4c1.45 0 3-1.69 3-3.5S14.5 6 13 6z"></path></svg></a>3. GitHub Actions 살펴보기</h3>
 <hr>
-<p>기본적으로 <strong>Public</strong> 저장소이기 때문에 노출되면 안되는 값들은 Github Repository에서 제공하는 환경 변수를 통해 변인 요인들을 관리하고 있.</p>
+<p>기본적으로 <strong>Public</strong> 저장소이기 때문에 노출되면 안되는 값들은 Github Repository에서 제공하는 환경 변수를 통해 변인 요인들을 관리하고 있다.</p>
 <p>Github Action은 CI/CD 파이프라인이 모두 자동화되고 있진 않으므로 이미지 빌드를 담당하는 <strong>ci.yml</strong>과 NAS로 원격 접속하여 배포를 진행하는 <strong>cd.yml</strong> 두개로 분리하여 구성하였다.</p>
 <br>
 <br>
